--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -14,3 +14,11 @@
         <div id="app"></div>
     </body>
 </html>
+
+<style>
+    body {
+        background-image: url('https://images.unsplash.com/photo-1538645731800-4640c639bba7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1225&q=80');
+        background-blend-mode: luminosity;
+        background-color: rgba(0,0,0,0.3);
+    }
+</style>
